# word_cup

./: .clang-format  .clangd  CMakeLists.txt  CTestCustom.cmake
c/: get_best_words.c  get_best_words.h  log.h  read_word.c  read_word.h  word_cup.c  word_holder.c  word_holder.h
cpp/: word_cup.cpp
